@@ -1,13 +1,6 @@
 Server-side only field
 ----------------------
 
-    >>> try:
-    ...     import plone.app.upgrade
-    ...     HAS_PLONE4 = True
-    ... except ImportError:
-    ...     HAS_PLONE4 = False
-
-
 Get our test browser::
 
     >>> from Products.Five.testbrowser import Browser
@@ -49,11 +42,7 @@ thank you page::
 Test for 'Subject' in the mail body::
 
     >>> msgtext = self.portal.MailHost.msgtext[self.portal.MailHost.msgtext.index('\n\n'):]
-    >>> if HAS_PLONE4:
-    ...     body = '\n\n'.join(self.portal.MailHost.msgtext.split('\n\n')[1:])
-    ... else:
-    ...     body = self.portal.MailHost.msgtext.split('\n\n')[-1].decode('base64')
-    
+    >>> body = '\n\n'.join(self.portal.MailHost.msgtext.split('\n\n')[1:])
     >>> 'Subject' in body
     False
 
@@ -70,10 +59,7 @@ you page, and then it should show up in mail and thanks page::
     >>> browser.getControl('Submit').click()
     <sent mail from ...to ['mdummy@address.com']>
 
-    >>> if HAS_PLONE4:
-    ...     body = '\n\n'.join(self.portal.MailHost.msgtext.split('\n\n')[1:])
-    ... else:
-    ...     body = self.portal.MailHost.msgtext.split('\n\n')[-1].decode('base64')
+    >>> body = '\n\n'.join(self.portal.MailHost.msgtext.split('\n\n')[1:])
     >>> 'Subject' in body
     True
 
